@@ -1,3 +1,9 @@
+2006-08-07	Benedikt Meurer <benny@xfce.org>
+
+	* exo-desktop-item-edit/exo-die-desktop-model.c
+	  (exo_die_desktop_item_new_from_file): Load only .desktop files of
+	  type Application.
+
 2006-08-06	Benedikt Meurer <benny@xfce.org>
 
 	* exo-desktop-item-edit/exo-die-command-entry.c,
